--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "ppm"
+name = "utils"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-vec3 = {path = "../vec3"}
-utils = {path = "../utils"}
+rand = "0.8.4"
+
+
